@@ -9,4 +9,4 @@ FROM eclipse-temurin:25-jre
 WORKDIR /app
 COPY --from=build /workspace/target/quarkus-app/ /app/
 EXPOSE 8080
-ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "--sun-misc-unsafe-memory-access=allow", "-jar", "/app/quarkus-run.jar"]
+ENTRYPOINT ["java", "-jar", "/app/quarkus-run.jar"]
